More bug fixes for controller initiations